--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <header class="header">
         <nav class="gnb">
           <h1>
+            logo
             <a href="#!"><img src="./img/2K_logo__1_.png" alt="" /></a>
           </h1>
           <a href="" class="burger"><i class="xi-bars"></i></a>
@@ -222,7 +223,7 @@
               </div>
             </div>
             <div class="promotionSlider">
-              <a href="">
+              <a href="#!">
                 <div class="content">
                   <figure><img src="./img/strategy/xcom2_tile_L_1.jpg" alt="" /></figure>
                   <div class="txt">
@@ -235,7 +236,7 @@
                   </div>
                 </div>
               </a>
-              <a href="">
+              <a href="#!">
                 <div class="content">
                   <figure><img src="./img/strategy/civilization6_tile_L_1.jpg" alt="" /></figure>
                   <div class="txt">
@@ -248,7 +249,7 @@
                   </div>
                 </div>
               </a>
-              <a href="">
+              <a href="#!">
                 <div class="content">
                   <figure><img src="./img/shooter/borderlands-thc_tile_L_1.jpg" alt="" /></figure>
                   <div class="txt">
@@ -261,7 +262,7 @@
                   </div>
                 </div>
               </a>
-              <a href="">
+              <a href="#!">
                 <div class="content">
                   <figure><img src="./img/shooter/mafia3_tile_L_1.jpg" alt="" /></figure>
                   <div class="txt">
@@ -609,24 +610,6 @@
           </div>
         </section>
         <!-- .category;; -->
-
-        <!-- .c03;; -->
-        <section class="c03">
-          <div class="container"></div>
-        </section>
-        <!-- .c03;; -->
-
-        <!-- .c04;; -->
-        <section class="c04">
-          <div class="container"></div>
-        </section>
-        <!-- .c04;; -->
-
-        <!-- .c05;; -->
-        <section class="c05">
-          <div class="container"></div>
-        </section>
-        <!-- .c05;; -->
       </main>
       <!-- .main;; -->
 
