--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>title</title>
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/slick.css" />
-    <link rel="stylesheet" href="./css/main.css" />
-    <link rel="stylesheet" href="./css/responsive.css" />
+    <link rel="stylesheet" href="./css/main.css?ver=1.0" />
+    <link rel="stylesheet" href="./css/responsive.css?ver=1.111" />
     <script src="./js/jquery-1.12.4.min.js"></script>
     <script src="./js/slick.min.js"></script>
-    <script src="./js/main.js"></script>
+    <script src="./js/main.js?ver=1.0"></script>
   </head>
   <body>
     <div class="Wrap">
