--- a/index.html
+++ b/index.html
@@ -22,7 +22,27 @@
             logo
             <a href="#!"><img src="./img/2K_logo__1_.png" alt="" /></a>
           </h1>
-          <a href="" class="burger"><i class="xi-bars"></i></a>
+          <ul class="menu">
+            <ul>
+              <li>asd</li>
+            </ul>
+            <ul>
+              <li>asd</li>
+            </ul>
+            <ul>
+              <li>asd</li>
+            </ul>
+            <ul>
+              <li>asd</li>
+            </ul>
+            <ul>
+              <li>asd</li>
+            </ul>
+          </ul>
+          <div class="btn">
+            <a href="" class="search"><i class="xi-search"></i></a>
+            <a href="" class="burger"><i class="xi-bars"></i></a>
+          </div>
         </nav>
       </header>
       <!-- .header;; -->
