--- a/index.html
+++ b/index.html
@@ -23,21 +23,36 @@
             <a href="#!"><img src="./img/2K_logo__1_.png" alt="" /></a>
           </h1>
           <ul class="menu">
-            <ul>
-              <li>asd</li>
-            </ul>
-            <ul>
-              <li>asd</li>
-            </ul>
-            <ul>
-              <li>asd</li>
-            </ul>
-            <ul>
-              <li>asd</li>
-            </ul>
-            <ul>
-              <li>asd</li>
-            </ul>
+            <li>
+              <ul>
+                game title
+                <li>game small title</li>
+              </ul>
+            </li>
+            <li>
+              <ul>
+                game title
+                <li>game small title</li>
+              </ul>
+            </li>
+            <li>
+              <ul>
+                game title
+                <li>game small title</li>
+              </ul>
+            </li>
+            <li>
+              <ul>
+                game title
+                <li>game small title</li>
+              </ul>
+            </li>
+            <li>
+              <ul>
+                game title
+                <li>game small title</li>
+              </ul>
+            </li>
           </ul>
           <div class="btn">
             <a href="" class="search"><i class="xi-search"></i></a>
