--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>title</title>
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/slick.css" />
-    <link rel="stylesheet" href="./css/main.css?ver=1.02" />
-    <link rel="stylesheet" href="./css/responsive.css?ver=1.117" />
+    <link rel="stylesheet" href="./css/main.css?ver=1.03" />
+    <link rel="stylesheet" href="./css/responsive.css?ver=1.118" />
     <script src="./js/jquery-1.12.4.min.js"></script>
     <script src="./js/slick.min.js"></script>
     <script src="./js/main.js?ver=1.0"></script>
@@ -22,38 +22,68 @@
             logo
             <a href="#!"><img src="./img/2K_logo__1_.png" alt="" /></a>
           </h1>
-          <ul class="menu">
-            <li>
-              <ul>
-                game title
-                <li>game small title</li>
-              </ul>
-            </li>
-            <li>
-              <ul>
-                game title
-                <li>game small title</li>
-              </ul>
-            </li>
-            <li>
-              <ul>
-                game title
-                <li>game small title</li>
-              </ul>
-            </li>
-            <li>
-              <ul>
-                game title
-                <li>game small title</li>
-              </ul>
-            </li>
-            <li>
-              <ul>
-                game title
-                <li>game small title</li>
-              </ul>
-            </li>
-          </ul>
+          <div class="menu">
+            <h2>H2 topTitles</h2>
+            <ul class="topTitle">
+              <li>
+                <ul>
+                  game title
+                  <li>game small titles</li>
+                </ul>
+              </li>
+              <li>
+                <ul>
+                  game title
+                  <li>game small titles</li>
+                </ul>
+              </li>
+              <li>
+                <ul>
+                  game title
+                  <li>game small titles</li>
+                </ul>
+              </li>
+              <li>
+                <ul>
+                  game title
+                  <li>game small titles</li>
+                </ul>
+              </li>
+              <li>
+                <ul>
+                  game title
+                  <li>game small titles</li>
+                </ul>
+              </li>
+            </ul>
+            <h2>H2 "find more 2k games" - bottomImagesTitle</h2>
+            <ul class="bottomImage">
+              <li>
+                <figure><img src="" alt="" />img</figure>
+                <p>gametitle</p>
+              </li>
+              <li>
+                <figure><img src="" alt="" />img</figure>
+                <p>gametitle</p>
+              </li>
+              <li>
+                <figure><img src="" alt="" />img</figure>
+                <p>gametitle</p>
+              </li>
+              <li>
+                <figure><img src="" alt="" />img</figure>
+                <p>gametitle</p>
+              </li>
+              <li>
+                <figure><img src="" alt="" />img</figure>
+                <p>gametitle</p>
+              </li>
+              <li>
+                <figure><img src="" alt="" />img</figure>
+                <p>gametitle</p>
+              </li>
+            </ul>
+          </div>
           <div class="btn">
             <a href="" class="search"><i class="xi-search"></i></a>
             <a href="" class="burger"><i class="xi-bars"></i></a>
