--- a/index.html
+++ b/index.html
@@ -26,38 +26,48 @@
             <h2>H2 topTitles</h2>
             <ul class="topTitle">
               <li>
-                <ul>
+                <ul class="sTitle">
                   game title
+                  <li>game small titles</li>
+                  <li>game small titles</li>
                   <li>game small titles</li>
                 </ul>
               </li>
               <li>
-                <ul>
+                <ul class="sTitle">
                   game title
+                  <li>game small titles</li>
+                  <li>game small titles</li>
                   <li>game small titles</li>
                 </ul>
               </li>
               <li>
-                <ul>
+                <ul class="sTitle">
                   game title
+                  <li>game small titles</li>
+                  <li>game small titles</li>
                   <li>game small titles</li>
                 </ul>
               </li>
               <li>
-                <ul>
+                <ul class="sTitle">
                   game title
+                  <li>game small titles</li>
+                  <li>game small titles</li>
                   <li>game small titles</li>
                 </ul>
               </li>
               <li>
-                <ul>
+                <ul class="sTitle">
                   game title
+                  <li>game small titles</li>
+                  <li>game small titles</li>
                   <li>game small titles</li>
                 </ul>
               </li>
             </ul>
-            <h2>H2 "find more 2k games" - bottomImagesTitle</h2>
-            <ul class="bottomImage">
+            <h2>H2 "find more 2k games"</h2>
+            <ul class="bottomSlide">
               <li>
                 <figure><img src="" alt="" />img</figure>
                 <p>gametitle</p>
