--- a/index.html
+++ b/index.html
@@ -23,74 +23,135 @@
             <a href="#!"><img src="./img/2K_logo__1_.png" alt="" /></a>
           </h1>
           <div class="menu">
-            <h2>H2 topTitles</h2>
             <ul class="topTitle">
               <li>
                 <ul class="sTitle">
-                  game title
-                  <li>game small titles</li>
-                  <li>game small titles</li>
-                  <li>game small titles</li>
+                  <p>BORDERLANDS</p>
+                  <li><a href="#">타이니 티나의 원더랜드</a></li>
+                  <li><a href="#">타이니 티나의 원더랜드: 시즌 패스</a></li>
+                  <li><a href="#">타이니 티나의 드래곤 요새 습격</a></li>
+                  <li><a href="#">보더랜드 3</a></li>
+                  <li><a href="#">보더랜드 3 시즌 패스</a></li>
+                  <li><a href="#">보더랜드 3 시즌 패스 2</a></li>
+                  <li><a href="#">보더랜드 3 시즌 패스 번들</a></li>
                 </ul>
               </li>
               <li>
                 <ul class="sTitle">
-                  game title
-                  <li>game small titles</li>
-                  <li>game small titles</li>
-                  <li>game small titles</li>
+                  <p>CIVILIZATION</p>
+                  <li><a href="#">시드 마이어의 문명®</a></li>
+                  <li><a href="#">시드 마이어의 문명® VI</a></li>
+                  <li><a href="#">시드 마이어의 문명® VI 앤솔러지</a></li>
+                  <li><a href="#">시드 마이어의 문명 VI 몰려드는 폭풍</a></li>
+                  <li><a href="#">시드 마이어의 문명 VI 플래티넘 에디션</a></li>
+                  <li><a href="#">시드 마이어의 문명 VI 흥망성쇠</a></li>
+                  <li><a href="#">문명 VI 시나리오 팩 번들</a></li>
                 </ul>
               </li>
               <li>
                 <ul class="sTitle">
-                  game title
-                  <li>game small titles</li>
-                  <li>game small titles</li>
-                  <li>game small titles</li>
+                  <p>SPORTS</p>
+                  <li><a href="#">NBA 2K23</a></li>
+                  <li><a href="#">WWE 2K22</a></li>
+                  <li><a href="#">WWE 2K22 시즌 패스</a></li>
+                  <li><a href="#">NBA 2K22</a></li>
+                  <li><a href="#">PGA TOUR 2K21</a></li>
+                  <li><a href="#">WWE 2K 배틀그라운드</a></li>
+                  <li><a href="#">얼티밋 브롤러 패스</a></li>
                 </ul>
               </li>
               <li>
                 <ul class="sTitle">
-                  game title
-                  <li>game small titles</li>
-                  <li>game small titles</li>
-                  <li>game small titles</li>
+                  <p>XCOM</p>
+                  <li><a href="#">XCOM 2</a></li>
+                  <li><a href="#">XCOM 2 컬렉션</a></li>
+                  <li><a href="#">XCOM 2 컬렉션 업그레이드</a></li>
+                  <li><a href="#">XCOM 2 선택된 자의 전쟁</a></li>
+                  <li><a href="#">XCOM 키메라 스쿼드</a></li>
+                  <li><a href="#">XCOM 얼티밋 컬렉션</a></li>
                 </ul>
               </li>
               <li>
                 <ul class="sTitle">
-                  game title
-                  <li>game small titles</li>
-                  <li>game small titles</li>
-                  <li>game small titles</li>
+                  <p>MAFIA</p>
+                  <li><a href="#">마피아 트릴로지</a></li>
+                  <li><a href="#">마피아 데피니티브 에디션</a></li>
+                  <li><a href="#">마피아 II 데피니티브 에디션</a></li>
+                  <li><a href="#">마피아 III 데피니티브 에디션</a></li>
                 </ul>
               </li>
             </ul>
-            <h2>H2 "find more 2k games"</h2>
+            <ul class="topTitle">
+              <li>
+                <ul class="sTitle">
+                  <p>BIOSHOCK</p>
+                  <li><a href="#">바이오쇼크 더 컬렉션</a></li>
+                  <li><a href="#">바이오쇼크 인피니트</a></li>
+                  <li><a href="#">바이오쇼크 2</a></li>
+                  <li><a href="#">BioShock Remastered</a></li>
+                </ul>
+              </li>
+              <li>
+                <ul class="sTitle">
+                  <p>CARNIVAL GAMES</p>
+                  <li><a href="#">CARNIVAL GAMES</a></li>
+                </ul>
+              </li>
+              <li>
+                <ul class="sTitle">
+                  <p>MARVEL'S MIDNIGHT SUNS</p>
+                  <li><a href="#">마블 미드나잇 선즈 </a></li>
+                </ul>
+              </li>
+              <li>
+                <ul class="sTitle">
+                  <p>THE QUARRY</p>
+                  <li><a href="#">쿼리</a></li>
+                </ul>
+              </li>
+              <li>
+                <ul class="sTitle">
+                  <p>NINTENDO SWITCH</p>
+                  <li><a href="#">NINTENDO SWITCH</a></li>
+                </ul>
+              </li>
+            </ul>
             <ul class="bottomSlide">
               <li>
-                <figure><img src="" alt="" />img</figure>
-                <p>gametitle</p>
+                <p>BIOSHOCK</p>
+                <figure><img src="./img/shooter/bioshock-tc_tile_L_1.jpg" alt="" /></figure>
               </li>
               <li>
-                <figure><img src="" alt="" />img</figure>
-                <p>gametitle</p>
+                <p>BORDERLANDS</p>
+                <figure><img src="./img/shooter/borderlands-tps_tile_L_1.jpg" alt="" /></figure>
               </li>
               <li>
-                <figure><img src="" alt="" />img</figure>
-                <p>gametitle</p>
+                <p>NBA</p>
+                <figure><img src="./img/sports/61524453bcea6NBA_2KMobile_tile.jpg" alt="" /></figure>
               </li>
               <li>
-                <figure><img src="" alt="" />img</figure>
-                <p>gametitle</p>
+                <p>2K23</p>
+                <figure><img src="./img/sports/62c71d1181dcdnba23-600x600.jpg" alt="" /></figure>
               </li>
               <li>
-                <figure><img src="" alt="" />img</figure>
-                <p>gametitle</p>
+                <p>CIVILIZATION</p>
+                <figure><img src="./img/strategy/civilization-bert_tile_L_1.jpg" alt="" /></figure>
               </li>
               <li>
-                <figure><img src="" alt="" />img</figure>
-                <p>gametitle</p>
+                <p>XCOM</p>
+                <figure><img src="./img/strategy/xcom-ew_tile_L_1.jpg" alt="" /></figure>
+              </li>
+              <li>
+                <p>MIDNIGHT SUNS</p>
+                <figure><img src="./img/strategy/62a2891701479MMS-thumb.jpg" alt="" /></figure>
+              </li>
+              <li>
+                <p>MAFIA</p>
+                <figure><img src="./img/shooter/mafia3_tile_L_1.jpg" alt="" /></figure>
+              </li>
+              <li>
+                <p>WWE</p>
+                <figure><img src="./img/sports/wwe2k18_tile_L_1.jpg" alt="" /></figure>
               </li>
             </ul>
           </div>
