--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
           <div class="menu">
             <ul class="topTitle">
               <li>
+                BORDERLANDS
                 <ul class="sTitle">
-                  <p>BORDERLANDS</p>
                   <li><a href="#">타이니 티나의 원더랜드</a></li>
                   <li><a href="#">타이니 티나의 원더랜드: 시즌 패스</a></li>
                   <li><a href="#">타이니 티나의 드래곤 요새 습격</a></li>
@@ -37,8 +37,8 @@
                 </ul>
               </li>
               <li>
+                CIVILIZATION
                 <ul class="sTitle">
-                  <p>CIVILIZATION</p>
                   <li><a href="#">시드 마이어의 문명®</a></li>
                   <li><a href="#">시드 마이어의 문명® VI</a></li>
                   <li><a href="#">시드 마이어의 문명® VI 앤솔러지</a></li>
@@ -49,8 +49,8 @@
                 </ul>
               </li>
               <li>
+                SPORTS
                 <ul class="sTitle">
-                  <p>SPORTS</p>
                   <li><a href="#">NBA 2K23</a></li>
                   <li><a href="#">WWE 2K22</a></li>
                   <li><a href="#">WWE 2K22 시즌 패스</a></li>
@@ -61,8 +61,8 @@
                 </ul>
               </li>
               <li>
+                XCOM
                 <ul class="sTitle">
-                  <p>XCOM</p>
                   <li><a href="#">XCOM 2</a></li>
                   <li><a href="#">XCOM 2 컬렉션</a></li>
                   <li><a href="#">XCOM 2 컬렉션 업그레이드</a></li>
@@ -72,8 +72,8 @@
                 </ul>
               </li>
               <li>
+                MAFIA
                 <ul class="sTitle">
-                  <p>MAFIA</p>
                   <li><a href="#">마피아 트릴로지</a></li>
                   <li><a href="#">마피아 데피니티브 에디션</a></li>
                   <li><a href="#">마피아 II 데피니티브 에디션</a></li>
@@ -83,8 +83,8 @@
             </ul>
             <ul class="topTitle">
               <li>
+                BIOSHOCK
                 <ul class="sTitle">
-                  <p>BIOSHOCK</p>
                   <li><a href="#">바이오쇼크 더 컬렉션</a></li>
                   <li><a href="#">바이오쇼크 인피니트</a></li>
                   <li><a href="#">바이오쇼크 2</a></li>
@@ -92,26 +92,26 @@
                 </ul>
               </li>
               <li>
+                CARNIVAL GAMES
                 <ul class="sTitle">
-                  <p>CARNIVAL GAMES</p>
                   <li><a href="#">CARNIVAL GAMES</a></li>
                 </ul>
               </li>
               <li>
+                MARVEL'S MIDNIGHT SUNS
                 <ul class="sTitle">
-                  <p>MARVEL'S MIDNIGHT SUNS</p>
                   <li><a href="#">마블 미드나잇 선즈 </a></li>
                 </ul>
               </li>
               <li>
+                THE QUARRY
                 <ul class="sTitle">
-                  <p>THE QUARRY</p>
                   <li><a href="#">쿼리</a></li>
                 </ul>
               </li>
               <li>
+                NINTENDO SWITCH
                 <ul class="sTitle">
-                  <p>NINTENDO SWITCH</p>
                   <li><a href="#">NINTENDO SWITCH</a></li>
                 </ul>
               </li>
@@ -142,7 +142,7 @@
                 <figure><img src="./img/strategy/xcom-ew_tile_L_1.jpg" alt="" /></figure>
               </li>
               <li>
-                <p>MIDNIGHT SUNS</p>
+                <p>MIDNIGHT</p>
                 <figure><img src="./img/strategy/62a2891701479MMS-thumb.jpg" alt="" /></figure>
               </li>
               <li>
