220729 header search + menu slide fix

--- a/index.html
+++ b/index.html
@@ -27,57 +27,57 @@
               <li>
                 BORDERLANDS
                 <ul class="sTitle">
-                  <li><a href="#">타이니 티나의 원더랜드</a></li>
-                  <li><a href="#">타이니 티나의 원더랜드: 시즌 패스</a></li>
-                  <li><a href="#">타이니 티나의 드래곤 요새 습격</a></li>
-                  <li><a href="#">보더랜드 3</a></li>
-                  <li><a href="#">보더랜드 3 시즌 패스</a></li>
-                  <li><a href="#">보더랜드 3 시즌 패스 2</a></li>
-                  <li><a href="#">보더랜드 3 시즌 패스 번들</a></li>
+                  <li><a href="">타이니 티나의 원더랜드</a></li>
+                  <li><a href="">타이니 티나의 원더랜드: 시즌 패스</a></li>
+                  <li><a href="">타이니 티나의 드래곤 요새 습격</a></li>
+                  <li><a href="">보더랜드 3</a></li>
+                  <li><a href="">보더랜드 3 시즌 패스</a></li>
+                  <li><a href="">보더랜드 3 시즌 패스 2</a></li>
+                  <li><a href="">보더랜드 3 시즌 패스 번들</a></li>
                 </ul>
               </li>
               <li>
                 CIVILIZATION
                 <ul class="sTitle">
-                  <li><a href="#">시드 마이어의 문명®</a></li>
-                  <li><a href="#">시드 마이어의 문명® VI</a></li>
-                  <li><a href="#">시드 마이어의 문명® VI 앤솔러지</a></li>
-                  <li><a href="#">시드 마이어의 문명 VI 몰려드는 폭풍</a></li>
-                  <li><a href="#">시드 마이어의 문명 VI 플래티넘 에디션</a></li>
-                  <li><a href="#">시드 마이어의 문명 VI 흥망성쇠</a></li>
-                  <li><a href="#">문명 VI 시나리오 팩 번들</a></li>
+                  <li><a href="">시드 마이어의 문명®</a></li>
+                  <li><a href="">시드 마이어의 문명® VI</a></li>
+                  <li><a href="">시드 마이어의 문명® VI 앤솔러지</a></li>
+                  <li><a href="">시드 마이어의 문명 VI 몰려드는 폭풍</a></li>
+                  <li><a href="">시드 마이어의 문명 VI 플래티넘 에디션</a></li>
+                  <li><a href="">시드 마이어의 문명 VI 흥망성쇠</a></li>
+                  <li><a href="">문명 VI 시나리오 팩 번들</a></li>
                 </ul>
               </li>
               <li>
                 SPORTS
                 <ul class="sTitle">
-                  <li><a href="#">NBA 2K23</a></li>
-                  <li><a href="#">WWE 2K22</a></li>
-                  <li><a href="#">WWE 2K22 시즌 패스</a></li>
-                  <li><a href="#">NBA 2K22</a></li>
-                  <li><a href="#">PGA TOUR 2K21</a></li>
-                  <li><a href="#">WWE 2K 배틀그라운드</a></li>
-                  <li><a href="#">얼티밋 브롤러 패스</a></li>
+                  <li><a href="">NBA 2K23</a></li>
+                  <li><a href="">WWE 2K22</a></li>
+                  <li><a href="">WWE 2K22 시즌 패스</a></li>
+                  <li><a href="">NBA 2K22</a></li>
+                  <li><a href="">PGA TOUR 2K21</a></li>
+                  <li><a href="">WWE 2K 배틀그라운드</a></li>
+                  <li><a href="">얼티밋 브롤러 패스</a></li>
                 </ul>
               </li>
               <li>
                 XCOM
                 <ul class="sTitle">
-                  <li><a href="#">XCOM 2</a></li>
-                  <li><a href="#">XCOM 2 컬렉션</a></li>
-                  <li><a href="#">XCOM 2 컬렉션 업그레이드</a></li>
-                  <li><a href="#">XCOM 2 선택된 자의 전쟁</a></li>
-                  <li><a href="#">XCOM 키메라 스쿼드</a></li>
-                  <li><a href="#">XCOM 얼티밋 컬렉션</a></li>
+                  <li><a href="">XCOM 2</a></li>
+                  <li><a href="">XCOM 2 컬렉션</a></li>
+                  <li><a href="">XCOM 2 컬렉션 업그레이드</a></li>
+                  <li><a href="">XCOM 2 선택된 자의 전쟁</a></li>
+                  <li><a href="">XCOM 키메라 스쿼드</a></li>
+                  <li><a href="">XCOM 얼티밋 컬렉션</a></li>
                 </ul>
               </li>
               <li>
                 MAFIA
                 <ul class="sTitle">
-                  <li><a href="#">마피아 트릴로지</a></li>
-                  <li><a href="#">마피아 데피니티브 에디션</a></li>
-                  <li><a href="#">마피아 II 데피니티브 에디션</a></li>
-                  <li><a href="#">마피아 III 데피니티브 에디션</a></li>
+                  <li><a href="">마피아 트릴로지</a></li>
+                  <li><a href="">마피아 데피니티브 에디션</a></li>
+                  <li><a href="">마피아 II 데피니티브 에디션</a></li>
+                  <li><a href="">마피아 III 데피니티브 에디션</a></li>
                 </ul>
               </li>
             </ul>
@@ -85,34 +85,34 @@
               <li>
                 BIOSHOCK
                 <ul class="sTitle">
-                  <li><a href="#">바이오쇼크 더 컬렉션</a></li>
-                  <li><a href="#">바이오쇼크 인피니트</a></li>
-                  <li><a href="#">바이오쇼크 2</a></li>
-                  <li><a href="#">BioShock Remastered</a></li>
+                  <li><a href="">바이오쇼크 더 컬렉션</a></li>
+                  <li><a href="">바이오쇼크 인피니트</a></li>
+                  <li><a href="">바이오쇼크 2</a></li>
+                  <li><a href="">BioShock Remastered</a></li>
                 </ul>
               </li>
               <li>
                 CARNIVAL GAMES
                 <ul class="sTitle">
-                  <li><a href="#">CARNIVAL GAMES</a></li>
+                  <li><a href="">CARNIVAL GAMES</a></li>
                 </ul>
               </li>
               <li>
                 MARVEL'S MIDNIGHT SUNS
                 <ul class="sTitle">
-                  <li><a href="#">마블 미드나잇 선즈 </a></li>
+                  <li><a href="">마블 미드나잇 선즈 </a></li>
                 </ul>
               </li>
               <li>
                 THE QUARRY
                 <ul class="sTitle">
-                  <li><a href="#">쿼리</a></li>
+                  <li><a href="">쿼리</a></li>
                 </ul>
               </li>
               <li>
                 NINTENDO SWITCH
                 <ul class="sTitle">
-                  <li><a href="#">NINTENDO SWITCH</a></li>
+                  <li><a href="">NINTENDO SWITCH</a></li>
                 </ul>
               </li>
             </ul>
@@ -156,6 +156,10 @@
             </ul>
           </div>
           <div class="btn">
+            <form action="">
+              <input type="text" placeholder="검색어를 입력해주세요." />
+              <button><i class="xi-send"></i></button>
+            </form>
             <a href="" class="search"><i class="xi-search"></i></a>
             <a href="" class="burger"><i class="xi-bars"></i></a>
           </div>
