--- a/index.html
+++ b/index.html
@@ -116,6 +116,24 @@
                 </ul>
               </li>
             </ul>
+            <ul class="menuInfo">
+              <li>
+                <a href=""> ABOUT US </a>
+              </li>
+              <li>
+                <a href=""> 2K FAMILY </a>
+              </li>
+              <li>
+                <a href=""> FORUMS </a>
+              </li>
+              <li>
+                <a href=""> SUPPORT </a>
+              </li>
+              <li class="login">
+                <a href="">Login</a>
+                <a href="">Sign up</a>
+              </li>
+            </ul>
             <ul class="bottomSlide">
               <li>
                 <p>BIOSHOCK</p>
