--- a/index.html
+++ b/index.html
@@ -363,6 +363,7 @@
               </div>
             </div>
           </div>
+          <div class="scrollDown"><i class="xi-angle-down-thin"></i></div>
         </section>
         <!-- .mainVisual;; -->
 
